--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@hookform/resolvers": "^2.9.8",
+    "classnames": "^2.3.1",
     "graphql": "^16.6.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
     "react-router-dom": "^6.3.0",
+    "remixicon": "^2.5.0",
     "swiper": "^8.3.2",
     "yup": "^0.32.11"
   },
